Update admin dashboard layout and print CSS to prevent wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -257,10 +257,14 @@ tr:last-child td {
 
     table {
         border: 1px solid black;
+        width: 100% !important;
+        border-collapse: collapse;
     }
     th, td {
         border: 1px solid black;
         color: black;
+        white-space: nowrap !important;
+        word-break: keep-all !important;
     }
 }
 
